# permaculture-tiles

./: .gitignore  Makefile  README.md  pyproject.toml
config/: render.toml
scripts/: contact_sheet.py  extract_palette.py
src/permatiles/: cli.py  data.py  geo.py  masks.py  pack.py  palette.py  prune.py  quantise.py  textures.py  tiles.py  watercolour.py
src/permatiles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_data.py  test_geo.py  test_masks.py  test_pack.py  test_palette.py  test_prune.py  test_quantise.py  test_smoke.py  test_textures.py  test_tiles.py  test_watercolour.py
wordpress/permatiles/: .phpunit.result.cache  composer.json  permatiles.php  phpunit.xml.dist  readme.txt
wordpress/permatiles/includes/: class-admin.php  class-manifest.php  class-pmtiles-reader.php  class-rate-limiter.php  class-tile-endpoint.php  class-updater.php
wordpress/permatiles/tests/: EndpointTest.php  ManifestTest.php  RateLimiterTest.php  ReaderTest.php  SmokeTest.php  bootstrap.php
wordpress/permatiles/tests/fixtures/: make_fixture.py  manifest.json  mini.pmtiles
