[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "permatiles"
version = "0.1.0"
description = "Watercolour basemap tile generator"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "Pillow>=10.0",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "requests>=2.31",
  "pmtiles>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
